--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+ImageIO==2.37.2
 joblib==1.5.2
+lazy_loader==0.4
+networkx==3.5
 numpy==2.2.6
 opencv-python==4.12.0.88
+packaging==25.0
 pillow==12.0.0
+scikit-image==0.25.2
 scikit-learn==1.7.2
 scipy==1.16.3
 threadpoolctl==3.6.0
+tifffile==2025.10.16
